Fix to Sonar issues